--- a/Example/Example/Base.lproj/Main.storyboard
+++ b/Example/Example/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -30,17 +30,31 @@
                                     <action selector="openAlbum:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pTG-YZ-mCP"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t7m-wU-EIN">
+                                <rect key="frame" x="40" y="132" width="60" height="30"/>
+                                <color key="backgroundColor" red="0.31764705879999999" green="0.71372549019999998" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="PEX-CE-fAp"/>
+                                    <constraint firstAttribute="width" constant="60" id="oen-Di-saF"/>
+                                </constraints>
+                                <state key="normal" title="获取视频"/>
+                                <connections>
+                                    <action selector="getVideo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mN9-yn-ORw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="t7m-wU-EIN" firstAttribute="centerX" secondItem="Wuh-Wa-yNy" secondAttribute="centerX" id="AuL-qi-wfR"/>
                             <constraint firstItem="Wuh-Wa-yNy" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="PkM-f9-YEN"/>
+                            <constraint firstItem="t7m-wU-EIN" firstAttribute="top" secondItem="Wuh-Wa-yNy" secondAttribute="bottom" constant="62" id="UeK-u9-ztc"/>
                             <constraint firstItem="Wuh-Wa-yNy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="nRi-Uh-a37"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="242" y="375"/>
+            <point key="canvasLocation" x="-10" y="380"/>
         </scene>
     </scenes>
 </document>
